# Nautical-Sport-Desktop-Application-QT-C-

./: Makefile  Makefile.Debug  Makefile.Release  README.md  camera.cpp  connection.cpp  connection.h  derniere_formation_supprimee.txt  employe.cpp  employe.h  formation_history.txt  gestion_employe.pro  gestion_employe.pro.user.3caf3a6  gestion_employe.pro.user.6155443  gestion_employe.pro.user.c52c9ee  gestion_employe.pro.user.d21a561  gestion_employe_resource.rc  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui  object_script.gestion_employe.Debug  object_script.gestion_employe.Release  ui_camera.h  ui_eq.h  ui_evenement.h  ui_imagesettings.h  ui_mainwindow.h  ui_mainwindow_ab.h  ui_mainwindow_ev.h  ui_mainwindow_formation.h  ui_mainwindowem.h  ui_videosettings.h
Arduino/: arduino.cpp  arduino.h  arduino2.cpp  arduino2.h  arduino3.cpp  arduino3.h
backlog/: afaire.txt  en cours.txt
camera/: camera.cpp  camera.h  camera.ui
debug/: moc_SmtpClient.cpp  moc_anciennesdonnees.cpp  moc_camera.cpp  moc_eq.cpp  moc_imagesettings.cpp  moc_mainwindow.cpp  moc_mainwindow_ab.cpp  moc_mainwindow_ev.cpp  moc_mainwindow_formation.cpp  moc_mainwindowem.cpp  moc_videosettings.cpp  qrc_camera.cpp
gestion_abonnement/: abonnement.cpp  abonnement.h  mainwindow_ab.cpp  mainwindow_ab.h  mainwindow_ab.ui
gestion_equipement_f/: eq.cpp  eq.h  eq.ui  equipement.cpp  equipement.h  qrcode.cpp  qrcode.h  ui_menu.h
gestion_evenements/: evenement.cpp  evenement.h  mainwindow_ev.cpp  mainwindow_ev.h  mainwindow_ev.ui  ui_mainwindow_ev.h
gestion_formation/: anciennesdonnees.h  (+5 more)
ressources/SmtpClient/src/: CMakeLists.txt
(+16 files in other folders)
